@@ -1,5 +1,7 @@
 2010-12-03  Meteor Liu  <meteor1113@gmail.com>
 
+	* init-basic.el: Improve flymake setting.
+
 	* init-toolbar.el: Add flymake toolbar.
 
 	* init-basic.el: Add flymake setting.
